exercises/log-output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ex1-01-ingress
  # namespace: default
  # annotations:
  # nginx.ingress.kubernetes.io/use-regex: 'true'
  # nginx.ingress.kubernetes.io/rewrite-target: /$2
  # nginx.ingress.kubernetes.io/rewrite-target: /abc
  # ingressclass.kubernetes.io/is-default-class: 'true'
  # kubernetes.io/ingress.class: 'nginx'
spec:
  # Below statement does't work ceases all routed IDK why!
  # ingressClassName: nginx-example
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ex1-01-svc
                port:
                  number: 2345
          # Below array item is to add /pingpong path redirection.
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: ping-pong-svc
                port:
                  number: 2346
# NOTES
# a rewrite working @ https://github.com/Tsuribori/devopswithkubernetes2020/blob/53ae48ab49163fa84ece96199cc8d7a552cc503e/manifests/ingress.yaml
#
# regex is not working: https://stackoverflow.com/questions/69878685/ingress-nginx-not-working-when-using-ingressclassname-instead-of-kubernetes-io-i
#
#

# - path: /pingpong
# - path: /pingpong/(.+)
# - path: /(link1)/
# - path: /
# - path: /(pingpong)
#
# https://github.com/kubernetes/ingress-nginx/blob/main/docs/examples/rewrite/README.md
#
# ingress resource @k8 docs: https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource
#
#
